main branch changes done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body bgcolor="lightblue">
-    
+    <h2 style="color: red;">this is code for main branch</h2>
    <h1 style="text-align: center;">this is index file
 </h1>
  </body>
