--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="lightblue">
     
-    this is index file
-</body>
+   <h1 style="text-align: center;">this is index file
+</h1>
+ </body>
 </html>
