for branch_2 change done in file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body bgcolor="lightblue">
-    
+   <h2 color="red ">i am giving changes for branch2</h2>  
    <h1 style="text-align: center;">this is index file
+   
 </h1>
  </body>
-</html>
+</html>  
